grammar.js
        stored_definitions: $ => seq(
            optional($.BOM),
            optional($.within_clause),
            repeat(field("storedDefinitions", $.stored_definition))
        ),
        stored_definition: $ => seq(
            optional(field("final", "final")),
            field("classDefinition", $.class_definition), ";"
        ),

        // A.2.2 Class Definition

        class_definition: $ => seq(
            optional(field("encapsulated", "encapsulated")),
            field("classPrefixes", $.class_prefixes),
            field("classSpecifier", $._class_specifier)
        ),

        class_prefixes: $ => seq(
            optional(field("partial", "partial")),
            choice(
                field("block", "block"),
                field("class", "class"),
                seq(
                    optional(field("expandable", "expandable")),
                    field("connector", "connector")),
                seq(
                    optional(choice(field("impure", "impure"), field("pure", "pure"))),
                    optional(field("operator", "operator")),
                    field("function", "function")),
                field("model", "model"),
                field("operator", "operator"),
                field("package", "package"),
                seq(
                    optional(field("operator", "operator")),
                    field("record", "record")),
                field("type", "type")
            )
        ),

        _class_specifier: $ => choice(
            $.derivative_class_specifier,
            $.enumeration_class_specifier,
            $.extends_class_specifier,
            $.long_class_specifier,
            $.short_class_specifier
        ),

        derivative_class_specifier: $ => seq(
            field("identifier", $.IDENT), "=", "der",
            "(", field("typeSpecifier", $.type_specifier), ",",
            field("argument", $.IDENT), optional(seq(",", field("argument", $.IDENT))), ")",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        enumeration_class_specifier: $ => seq(
            field("identifier", $.IDENT), "=", "enumeration", "(",
            choice(
                optional(field("enumerationLiterals", $.enum_list)),
                field("unspecified", ":")
            ),
            ")",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        enum_list: $ => seq(
            field("enumerationLiteral", $.enumeration_literal), repeat(seq(",", field("enumerationLiteral", $.enumeration_literal)))
        ),

        enumeration_literal: $ => seq(
            field("identifier", $.IDENT),
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        extends_class_specifier: $ => seq(
            "extends",
            field("identifier", $.IDENT),
            optional(field("classModification", $.class_modification)),
            optional(field("descriptionString", $.description_string)),
            optional($.element_list),
            repeat(choice(
                $.public_element_list,
                $.protected_element_list,
                $.algorithm_section,
                $.equation_section)),
            optional(field("externalClause", $.external_clause)),
            optional(seq(field("annotationClause", $.annotation_clause), ";")),
            "end",
            field("endIdentifier", $.IDENT)
        ),

        long_class_specifier: $ => seq(
            field("identifier", $.IDENT),
            optional(field("descriptionString", $.description_string)),
            optional($.element_list),
            repeat(choice(
                $.public_element_list,
                $.protected_element_list,
                $.algorithm_section,
                $.equation_section
            )),
            optional(field("externalClause", $.external_clause)),
            optional(seq(field("annotationClause", $.annotation_clause), ";")),
            "end",
            field("endIdentifier", $.IDENT)
        ),

        short_class_specifier: $ => seq(
            field("identifier", $.IDENT),
            "=",
            optional(field("basePrefix", $.base_prefix)),
            field("typeSpecifier", $.type_specifier),
            optional(field("subscripts", $.array_subscripts)),
            optional(field("classModification", $.class_modification)),
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        external_clause: $ => seq(
            "external",
            optional(field("languageSpecification", $.language_specification)),
            optional(field("externalFunction", $.external_function)),
            optional(field("annotationClause", $.annotation_clause)),
            ";"
        ),

        language_specification: $ => field("value", $.STRING),

        external_function: $ => seq(
            optional(seq(field("componentReference", $.component_reference), "=")),
            field("identifier", $.IDENT), "(", optional(field("expressions", $.expression_list)), ")"
        ),

        element_list: $ => seq(
            repeat1(seq(field("element", $._element), ";"))
        ),

        public_element_list: $ => seq(
            "public", repeat(seq(field("element", $._element), ";"))
        ),

        protected_element_list: $ => seq(
            "protected", repeat(seq(field("element", $._element), ";"))
        ),

        _element: $ => choice(
            $.extends_clause,
            $.import_clause,
            $.named_element
        ),

        named_element: $ => seq(
            optional(field("redeclare", "redeclare")),
            optional(field("final", "final")),
            optional(field("inner", "inner")),
            optional(field("outer", "outer")),
            optional(field("replaceable", "replaceable")),
            choice(
                field("classDefinition", $.class_definition),
                field("componentClause", $.component_clause)
            ),
            optional(seq(
                field("constrainingClause", $.constraining_clause),
                optional(field("descriptionString", $.description_string)),
                optional(field("annotationClause", $.annotation_clause))
            )),
        ),

        import_clause: $ => seq(
            "import",
            choice(
                seq(field("alias", $.IDENT), "=", field("name", $.name)),
                seq(
                    field("name", $.name),
                    optional(
                        seq(".",
                            choice(
                                field("wildcard", "*"),
                                seq("{", field("imports", $.import_list), "}")
                            )
                        )
                    )
                )
            ),
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause)),
        ),

        import_list: $ => seq(
            field("import", $.IDENT), repeat(seq(",", field("import", $.IDENT)))
        ),

        // A.2.3 Extends

        extends_clause: $ => seq(
            "extends",
            field("typeSpecifier", $.type_specifier),
            optional(field("classModification", $.class_modification)),
            optional(field("annotationClause", $.annotation_clause)),
        ),

        constraining_clause: $ => seq(
            "constrainedby",
            field("typeSpecifier", $.type_specifier),
            optional(field("classModification", $.class_modification))
        ),

        // A.2.4 Component Clause

        component_clause: $ => seq(
            optional(choice(field("flow", "flow"), field("stream", "stream"))),
            optional(choice(field("constant", "constant"), field("discrete", "discrete"), field("parameter", "parameter"))),
            optional(choice(field("input", "input"), field("output", "output"))),
            field("typeSpecifier", $.type_specifier),
            optional(field("subscripts", $.array_subscripts)),
            field("componentDeclarations", $.component_list)
        ),

        component_list: $ => seq(
            field("componentDeclaration", $.component_declaration),
            repeat(seq(",", field("componentDeclaration", $.component_declaration)))
        ),

        component_declaration: $ => seq(
            field("declaration", $.declaration),
            optional(seq("if", field("condition", $.expression))),
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        declaration: $ => seq(
            field("identifier", $.IDENT),
            optional(field("subscripts", $.array_subscripts)),
            optional(field("modification", $.modification))
        ),

        // A.2.5 Modification

        modification: $ => choice(
            seq(field("classModification", $.class_modification), optional(seq("=", field("expression", $.expression)))),
            seq(choice("=", ":="), field("expression", $.expression))
        ),

        class_modification: $ => seq(
            "(", optional(field("arguments", $.argument_list)), ")"
        ),

        argument_list: $ => seq(
            field("argument", $._argument), repeat(seq(",", field("argument", $._argument)))
        ),

        _argument: $ => choice(
            $.element_modification,
            $._element_redeclaration
        ),

        element_modification: $ => seq(
            optional(field("each", "each")),
            optional(field("final", "final")),
            field("name", $.name),
            optional(field("modification", $.modification)),
            optional(field("descriptionString", $.description_string))
        ),

        class_redeclaration: $ => seq(
            optional(field("redeclare", "redeclare")),
            optional(field("each", "each")),
            optional(field("final", "final")),
            optional(field("replaceable", "replaceable")),
            field("classDefinition", $.short_class_definition),
            optional(field("constrainingClause", $.constraining_clause))
        ),

        component_redeclaration: $ => seq(
            optional(field("redeclare", "redeclare")),
            optional(field("each", "each")),
            optional(field("final", "final")),
            optional(field("replaceable", "replaceable")),
            field("componentClause", $.component_clause),
            optional(field("constrainingClause", $.constraining_clause))
        ),

        short_class_definition: $ => seq(
            field("classPrefixes", $.class_prefixes),
            field("classSpecifier", choice(
                $.enumeration_class_specifier,
                $.short_class_specifier
            ))
        ),

        // A.2.6 Equations

        equation_section: $ => prec.left(seq(
            optional(field("initial", "initial")), "equation",
            optional(field("equations", $.equation_list))
        )),

        equation_list: $ => repeat1(seq(field("equation", $._equation), ";")),

        _equation: $ => choice(
            $.connect_clause,
            $.for_equation,
            $.function_application_equation,
            $.if_equation,
            $.simple_equation,
            $.when_equation
        ),

        simple_equation: $ => seq(
            field("expression1", $.simple_expression), "=", field("expression2", $.expression),
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause)),
        ),

        expression: $ => choice(
            $.if_expression,
            $.range_expression,
            $.simple_expression
        ),

        simple_expression: $ => choice(
            $.unary_expression,
            $.binary_expression,
            $.primary_expression
        ),

        binary_expression: $ => choice(
            prec.left(1, seq(field("operand1", $.simple_expression), field("operator", "or"), field("operand2", $.simple_expression))),
            prec.left(2, seq(field("operand1", $.simple_expression), field("operator", "and"), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", "<"), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", "<="), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", ">"), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", ">="), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", "=="), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", "<>"), field("operand2", $.simple_expression))),
            prec.left(4, seq(field("operand1", $.simple_expression), field("operator", "+"), field("operand2", $.simple_expression))),
            prec.left(4, seq(field("operand1", $.simple_expression), field("operator", "-"), field("operand2", $.simple_expression))),
            prec.left(4, seq(field("operand1", $.simple_expression), field("operator", ".+"), field("operand2", $.simple_expression))),
            prec.left(4, seq(field("operand1", $.simple_expression), field("operator", ".-"), field("operand2", $.simple_expression))),
            prec.left(5, seq(field("operand1", $.simple_expression), field("operator", "*"), field("operand2", $.simple_expression))),
            prec.left(5, seq(field("operand1", $.simple_expression), field("operator", "/"), field("operand2", $.simple_expression))),
            prec.left(5, seq(field("operand1", $.simple_expression), field("operator", ".*"), field("operand2", $.simple_expression))),
            prec.left(5, seq(field("operand1", $.simple_expression), field("operator", "./"), field("operand2", $.simple_expression))),
            prec.right(6, seq(field("operand1", $.primary_expression), field("operator", "^"), field("operand2", $.primary_expression))),
            prec.right(6, seq(field("operand1", $.primary_expression), field("operator", ".^"), field("operand2", $.primary_expression))),
        ),

        primary_expression: $ => choice(
            $.array_comprehension,
            $.array_concatenation,
            $.array_constructor,
            $.component_reference,
            $.end_expression,
            $.function_application,
            $.literal_expression,
            $.parenthesized_expression
        ),

        function_application: $ => seq(
            choice(
                field("functionReference", $.component_reference),
                field("der", "der"), field("initial", "initial"), field("pure", "pure")
            ),
            field("arguments", $.function_call_args)
        ),

        literal_expression: $ => choice(
            $.logical_literal_expression,
            $.string_literal_expression,
            $._unsigned_number_literal_expression,
        ),

        _unsigned_number_literal_expression: $ => choice(
            $.unsigned_integer_literal_expression,
            $.unsigned_real_literal_expression,
        ),

        unsigned_integer_literal_expression: $ => $.UNSIGNED_INTEGER,

        unsigned_real_literal_expression: $ => $.UNSIGNED_REAL,

        type_specifier: $ => seq(
            optional(field("global", ".")), field("name", $.name)
        ),
