test/corpus/a2-2_short_class.txt
====================================
Short Empty Class with Block Comment
====================================

model Foo = /* Comment */ Bar;

---

(stored_definitions
  (stored_definition
    (class_definition
      (class_prefixes)
      (short_class_specifier
        (IDENT)
        (BLOCK_COMMENT)
        (type_specifier
          (name
            (IDENT)))))))

===============================
Short Class with String Comment
===============================

model Foo = Bar "string comment";

---

(stored_definitions
  (stored_definition
    (class_definition
      (class_prefixes)
      (short_class_specifier
      (IDENT)
        (type_specifier
          (name
            (IDENT)))
        (description_string
          (STRING))))))
