test/corpus/a2-3_Extends.txt
==============
Extends Clause
==============

class Parent
  Real value = 10.0;
end Parent;

class Child extends Parent;
end Child;

---

(stored_definitions
  (stored_definition
    (class_definition
      (class_prefixes)
      (long_class_specifier
        (IDENT)
        (element_list
          (named_element
            (component_clause
              (type_specifier
                (name
                  (IDENT)))
              (component_list
                (component_declaration
                  (declaration
                    (IDENT)
                    (modification
                      (expression
                        (simple_expression
                          (primary_expression
                            (literal_expression
                              (unsigned_real_literal_expression
                                (UNSIGNED_REAL)))))))))))))
          (IDENT))))
    (stored_definition
      (class_definition
        (class_prefixes)
        (long_class_specifier
          (IDENT)
          (element_list
            (extends_clause
              (type_specifier
                (name
                  (IDENT)))))
          (IDENT)))))

=====================
Constrained By Clause
=====================

model ElectricalSource
  replaceable SineSource source constrainedby MO ( final n =5);
end ElectricalSource;

---

(stored_definitions
  (stored_definition
    (class_definition
      (class_prefixes)
      (long_class_specifier
        (IDENT)
        (element_list
          (named_element
            (component_clause
              (type_specifier
                (name
                  (IDENT)))
              (component_list
                (component_declaration
                  (declaration
                    (IDENT)))))
            (constraining_clause
              (type_specifier
                (name
                  (IDENT)))
              (class_modification
                (argument_list
                  (element_modification
                    (name
                      (IDENT))
                    (modification
                      (expression
                        (simple_expression
                          (primary_expression
                            (literal_expression
                              (unsigned_integer_literal_expression
                                (UNSIGNED_INTEGER)))))))))))))
          (IDENT)))))
